--- a/test/vcr_cassettes/cn_style.yaml
+++ b/test/vcr_cassettes/cn_style.yaml
@@ -5,8 +5,8 @@ interactions:
       Accept: [text/x-bibliography; style = apa; locale = en-US]
       Accept-Encoding: ['gzip, deflate']
       Connection: [keep-alive]
-      User-Agent: [python-requests/2.18.4 habanero/0.6.0.2]
-      X-USER-AGENT: [python-requests/2.18.4 habanero/0.6.0.2]
+      User-Agent: [python-requests/2.18.4 habanero/0.6.0.3]
+      X-USER-AGENT: [python-requests/2.18.4 habanero/0.6.0.3]
     method: GET
     uri: https://doi.org/10.1126/science.169.3946.635
   response:
@@ -16,20 +16,20 @@ interactions:
     headers:
       Content-Length: ['197']
       Content-Type: [text/html;charset=utf-8]
-      Date: ['Mon, 02 Apr 2018 16:21:26 GMT']
-      Expires: ['Mon, 02 Apr 2018 17:00:15 GMT']
+      Date: ['Thu, 24 May 2018 23:03:49 GMT']
+      Expires: ['Thu, 24 May 2018 23:56:05 GMT']
       Location: ['https://data.crossref.org/10.1126%2Fscience.169.3946.635']
       Server: [Apache-Coyote/1.1]
       Vary: [Accept]
-    status: {code: 303, message: See Other}
+    status: {code: 302, message: Found}
 - request:
     body: null
     headers:
       Accept: [text/x-bibliography; style = apa; locale = en-US]
       Accept-Encoding: ['gzip, deflate']
       Connection: [keep-alive]
-      User-Agent: [python-requests/2.18.4 habanero/0.6.0.2]
-      X-USER-AGENT: [python-requests/2.18.4 habanero/0.6.0.2]
+      User-Agent: [python-requests/2.18.4 habanero/0.6.0.3]
+      X-USER-AGENT: [python-requests/2.18.4 habanero/0.6.0.3]
     method: GET
     uri: https://data.crossref.org/10.1126%2Fscience.169.3946.635
   response:
@@ -44,7 +44,7 @@ interactions:
       Connection: [close]
       Content-Length: ['206']
       Content-Type: [text/x-bibliography]
-      Date: ['Mon, 02 Apr 2018 16:21:28 GMT']
+      Date: ['Thu, 24 May 2018 23:03:53 GMT']
       Link: ['<http://dx.doi.org/10.1126/science.169.3946.635>; rel="canonical", <https://syndication.highwire.org/content/doi/10.1126/science.169.3946.635>;
           version="vor"; rel="item"']
       Server: [http-kit]
@@ -57,8 +57,8 @@ interactions:
       Accept: [text/x-bibliography; style = ieee; locale = en-US]
       Accept-Encoding: ['gzip, deflate']
       Connection: [keep-alive]
-      User-Agent: [python-requests/2.18.4 habanero/0.6.0.2]
-      X-USER-AGENT: [python-requests/2.18.4 habanero/0.6.0.2]
+      User-Agent: [python-requests/2.18.4 habanero/0.6.0.3]
+      X-USER-AGENT: [python-requests/2.18.4 habanero/0.6.0.3]
     method: GET
     uri: https://doi.org/10.1126/science.169.3946.635
   response:
@@ -68,20 +68,20 @@ interactions:
     headers:
       Content-Length: ['197']
       Content-Type: [text/html;charset=utf-8]
-      Date: ['Mon, 02 Apr 2018 16:21:28 GMT']
-      Expires: ['Mon, 02 Apr 2018 16:58:37 GMT']
+      Date: ['Thu, 24 May 2018 23:03:53 GMT']
+      Expires: ['Thu, 24 May 2018 23:10:19 GMT']
       Location: ['https://data.crossref.org/10.1126%2Fscience.169.3946.635']
       Server: [Apache-Coyote/1.1]
       Vary: [Accept]
-    status: {code: 303, message: See Other}
+    status: {code: 302, message: Found}
 - request:
     body: null
     headers:
       Accept: [text/x-bibliography; style = ieee; locale = en-US]
       Accept-Encoding: ['gzip, deflate']
       Connection: [keep-alive]
-      User-Agent: [python-requests/2.18.4 habanero/0.6.0.2]
-      X-USER-AGENT: [python-requests/2.18.4 habanero/0.6.0.2]
+      User-Agent: [python-requests/2.18.4 habanero/0.6.0.3]
+      X-USER-AGENT: [python-requests/2.18.4 habanero/0.6.0.3]
     method: GET
     uri: https://data.crossref.org/10.1126%2Fscience.169.3946.635
   response:
@@ -96,7 +96,7 @@ interactions:
       Connection: [close]
       Content-Length: ['198']
       Content-Type: [text/x-bibliography]
-      Date: ['Mon, 02 Apr 2018 16:21:29 GMT']
+      Date: ['Thu, 24 May 2018 23:03:55 GMT']
       Link: ['<http://dx.doi.org/10.1126/science.169.3946.635>; rel="canonical", <https://syndication.highwire.org/content/doi/10.1126/science.169.3946.635>;
           version="vor"; rel="item"']
       Server: [http-kit]
