--- a/test/vcr_cassettes/types_works.yaml
+++ b/test/vcr_cassettes/types_works.yaml
@@ -5,23 +5,24 @@ interactions:
       Accept: ['*/*']
       Accept-Encoding: ['gzip, deflate']
       Connection: [keep-alive]
-      User-Agent: [python-requests/2.18.4 habanero/0.6.0.2]
-      X-USER-AGENT: [python-requests/2.18.4 habanero/0.6.0.2]
+      User-Agent: [python-requests/2.18.4 habanero/0.6.0.3]
+      X-USER-AGENT: [python-requests/2.18.4 habanero/0.6.0.3]
     method: GET
     uri: https://api.crossref.org/types/journal/works?rows=2
   response:
-    body: {string: '{"status":"ok","message-type":"work-list","message-version":"1.0.0","message":{"facets":{},"total-results":25634,"items":[{"indexed":{"date-parts":[[2018,1,30]],"date-time":"2018-01-30T17:41:20Z","timestamp":1517334080346},"reference-count":0,"publisher":"Universidad
-        Internacional de la Rioja","content-domain":{"domain":[],"crossmark-restriction":false},"DOI":"10.22550\/rep","type":"journal","created":{"date-parts":[[2018,1,30]],"date-time":"2018-01-30T17:25:34Z","timestamp":1517333134000},"source":"Crossref","is-referenced-by-count":0,"title":["Revista
-        Espa\u00f1ola de Pedagog\u00eda"],"prefix":"10.22550","member":"9839","deposited":{"date-parts":[[2018,1,30]],"date-time":"2018-01-30T17:25:34Z","timestamp":1517333134000},"score":1.0,"short-title":["REP"],"issued":{"date-parts":[[null]]},"references-count":0,"URL":"http:\/\/dx.doi.org\/10.22550\/rep","ISSN":["0034-9461","2174-0909"],"issn-type":[{"value":"0034-9461","type":"print"},{"value":"2174-0909","type":"electronic"}],"subject":["Education"]},{"indexed":{"date-parts":[[2018,1,30]],"date-time":"2018-01-30T16:40:37Z","timestamp":1517330437237},"reference-count":0,"publisher":"Marshall
-        University Libraries","content-domain":{"domain":[],"crossmark-restriction":false},"DOI":"10.18590\/issn.2379-9536","type":"journal","created":{"date-parts":[[2015,10,8]],"date-time":"2015-10-08T18:45:25Z","timestamp":1444329925000},"source":"Crossref","is-referenced-by-count":0,"title":["Marshall
-        Journal of Medicine"],"prefix":"10.18590","member":"7915","deposited":{"date-parts":[[2018,1,30]],"date-time":"2018-01-30T16:05:45Z","timestamp":1517328345000},"score":1.0,"short-title":["MJM"],"issued":{"date-parts":[[null]]},"references-count":0,"URL":"http:\/\/dx.doi.org\/10.18590\/issn.2379-9536","ISSN":["2379-9536"],"issn-type":[{"value":"2379-9536","type":"electronic"}]}],"items-per-page":2,"query":{"start-index":0,"search-terms":null}}}'}
+    body: {string: '{"status":"ok","message-type":"work-list","message-version":"1.0.0","message":{"facets":{},"total-results":26257,"items":[{"indexed":{"date-parts":[[2018,4,14]],"date-time":"2018-04-14T03:22:12Z","timestamp":1523676132266},"reference-count":0,"publisher":"Open
+        Access Text Pvt, Ltd.","content-domain":{"domain":[],"crossmark-restriction":false},"DOI":"10.15761\/imm","type":"journal","created":{"date-parts":[[2018,2,26]],"date-time":"2018-02-26T10:29:22Z","timestamp":1519640962000},"source":"Crossref","is-referenced-by-count":0,"title":["Integrative
+        Molecular Medicine"],"prefix":"10.15761","member":"6817","deposited":{"date-parts":[[2018,2,26]],"date-time":"2018-02-26T10:29:22Z","timestamp":1519640962000},"score":1.0,"short-title":["Integr
+        Mol Med"],"issued":{"date-parts":[[null]]},"references-count":0,"URL":"http:\/\/dx.doi.org\/10.15761\/imm","ISSN":["2056-6360"],"issn-type":[{"value":"2056-6360","type":"electronic"}]},{"indexed":{"date-parts":[[2018,4,14]],"date-time":"2018-04-14T03:18:57Z","timestamp":1523675937324},"reference-count":0,"publisher":"The
+        Korean Society for Feminist Studies in English Literature","content-domain":{"domain":[],"crossmark-restriction":false},"DOI":"10.15796\/fsel","type":"journal","created":{"date-parts":[[2017,8,22]],"date-time":"2017-08-22T08:18:57Z","timestamp":1503389937000},"source":"Crossref","is-referenced-by-count":0,"title":["Feminist
+        Studies in English Literature"],"prefix":"10.15796","member":"6506","language":"en","deposited":{"date-parts":[[2017,8,22]],"date-time":"2017-08-22T08:18:57Z","timestamp":1503389937000},"score":1.0,"short-title":["feministstudiesinenglishliterature"],"issued":{"date-parts":[[null]]},"references-count":0,"URL":"http:\/\/dx.doi.org\/10.15796\/fsel","ISSN":["1226-9689"],"issn-type":[{"value":"1226-9689","type":"print"}]}],"items-per-page":2,"query":{"start-index":0,"search-terms":null}}}'}
     headers:
       Access-Control-Allow-Headers: [X-Requested-With]
       Access-Control-Allow-Origin: ['*']
       Connection: [close]
-      Content-Length: ['1903']
+      Content-Length: ['1885']
       Content-Type: [application/json;charset=UTF-8]
-      Date: ['Mon, 02 Apr 2018 16:23:10 GMT']
+      Date: ['Thu, 24 May 2018 23:11:08 GMT']
       Server: [http-kit]
       Vary: [Accept]
       X-Rate-Limit-Interval: [1s]
